# claude-tuner-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  uninstall.sh
docs/: ARCHITECTURE.md  COMMANDS.md  OVERVIEW.md
harvester/: harvest.py  harvester.py  sweep.py  sweep.sh
homunculus/: _capture.py  _write_instincts.py  analyze.sh  capture-guard.sh  exclude_paths.example  recall-instincts.sh
hooks/: session-context.sh  settings.hooks.json  testrun-capture.sh
launchd/: com.harvester.sweep.plist.template  com.homunculus.observer.plist.template  com.memory.maintain.plist.template
memory-convention/: MEMORY.template.md  memory-instructions.md
memory-convention/examples/: project-memtools.md
memtools/: maintain.sh  mem  pyproject.toml
memtools/memtools/: __init__.py  chunker.py  cli.py  config.py  embed.py  feed_graphify.py  filevec.py  index.py  lifecycle.py  linker.py  recall.py
memtools/tests/: conftest.py  test_chunker.py  test_index_recall.py  test_lifecycle.py  test_linker.py
