[project]
name = "memtools"
version = "0.1.0"
description = "Semantic recall, decay/lifecycle, auto-linking and graphify feed over Claude's file-based memory"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memtools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
